ant-demo/codepkg/objects/Healthcare_QuoteDetail_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Health_Care_Quote_Line_ID__c</fullName>
        <label>Health Care Quote Line ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcare_Quote_Staging__c</fullName>
        <label>Healthcare Quote Staging</label>
        <referenceTo>Healthcare_Quote_Staging__c</referenceTo>
        <relationshipLabel>Healthcare QuoteDetail Staging</relationshipLabel>
        <relationshipName>Healthcare_QuoteDetail_Staging</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_ID__c</fullName>
        <label>Pricebook Entry ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>Quote ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Healthcare QuoteDetail Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Healthcare QuoteDetail Staging_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcare QuoteDetail Staging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>